getting things fixed: - fixed the background brightness on the third project card - adjusted the background color of the fourth project's cta - fixed the wrapping properties of tooltips - added a tooltip on social inline links - tweaked the tooltip animation and added one for social inline links
Took 30 minutes

--- a/src/output.css
+++ b/src/output.css
@@ -1016,7 +1016,6 @@ h4 {
 
 .project:nth-of-type(3) .container {
   --tw-backdrop-blur: blur(12px);
-  --tw-backdrop-brightness: brightness(.75);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
@@ -1041,6 +1040,8 @@ h4 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  --tw-brightness: brightness(.75);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .raycast-background img {
@@ -1160,11 +1161,11 @@ h4 {
 
 .arcane-button {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-  --tw-bg-opacity: 0.4;
+  --tw-bg-opacity: 0.25;
 }
 
 .arcane-button:hover {
-  --tw-bg-opacity: 0.5;
+  --tw-bg-opacity: 0.35;
 }
 
 .proj-button img {
@@ -1188,8 +1189,7 @@ h4 {
   left: 50%;
   --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  animation: tooltip 0.1s;
-  text-wrap: nowrap;
+  animation: tooltipDown 0.2s ease-out;
   border-radius: 0.5rem;
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
@@ -1197,6 +1197,7 @@ h4 {
   padding-right: 0.5rem;
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
+  text-align: center;
   font-size: 1.125rem;
   line-height: 1.75rem;
   --tw-text-opacity: 1;
@@ -1229,7 +1230,32 @@ h4 {
 }
 
 .social-inline {
+  position: relative;
   font-weight: 800;
+}
+
+.social-inline:hover::before {
+  content: attr(aria-label);
+  position: absolute;
+  top: -2.5rem;
+  left: 50%;
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  animation: tooltipUp 0.2s ease-out;
+  text-wrap: nowrap;
+  border-radius: 0.5rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  text-align: center;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  font-weight: 500;
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .noselect {
@@ -1285,12 +1311,26 @@ h4 {
   }
 }
 
-@keyframes tooltip {
+@keyframes tooltipDown {
   0% {
+    bottom: -1.75rem;
     opacity: 0.5;
   }
 
   100% {
+    bottom: -2rem;
+    opacity: 1;
+  }
+}
+
+@keyframes tooltipUp {
+  0% {
+    top: -2.25rem;
+    opacity: 0.5;
+  }
+
+  100% {
+    top: -2.5rem;
     opacity: 1;
   }
 }
