--- a/src/styles.css
+++ b/src/styles.css
@@ -77,7 +77,7 @@ h4 {
 }
 
 .project:nth-of-type(3) .container {
-    @apply backdrop-blur-md backdrop-brightness-75;
+    @apply backdrop-blur-md;
 }
 
 .project:nth-of-type(4) {
@@ -86,7 +86,7 @@ h4 {
 }
 
 .raycast-background {
-    @apply absolute bottom-12 right-20 flex flex-col items-center;
+    @apply absolute bottom-12 right-20 flex flex-col items-center brightness-75;
 }
 
 .raycast-background img {
@@ -145,7 +145,7 @@ h4 {
 }
 
 .arcane-button {
-    @apply bg-black bg-opacity-40 hover:bg-opacity-50;
+    @apply bg-black bg-opacity-25 hover:bg-opacity-35;
 }
 
 .proj-button img {
@@ -163,7 +163,7 @@ h4 {
 
 .tech-icons a:hover::after {
     content: attr(aria-label);
-    @apply absolute -bottom-8 left-1/2 -translate-x-1/2 animate-[tooltip_0.1s] text-nowrap rounded-lg bg-gray-200 px-2 py-1 text-lg text-black;
+    @apply absolute -bottom-8 left-1/2 -translate-x-1/2 animate-[tooltipDown_0.2s_ease-out] rounded-lg bg-gray-200 px-2 py-1 text-center text-lg text-black;
 }
 
 .buttons {
@@ -181,7 +181,12 @@ h4 {
 }
 
 .social-inline {
-    font-weight: 800;
+    @apply relative font-extrabold;
+}
+
+.social-inline:hover::before {
+    content: attr(aria-label);
+    @apply absolute -top-10 left-1/2 -translate-x-1/2 animate-[tooltipUp_0.2s_ease-out] text-nowrap rounded-lg bg-gray-200 px-2 py-1 text-center text-lg font-medium text-black;
 }
 
 .noselect {
@@ -229,12 +234,21 @@ h4 {
     }
 }
 
-@keyframes tooltip {
+@keyframes tooltipDown {
     0% {
-        @apply opacity-50;
+        @apply -bottom-7 opacity-50;
     }
     100% {
-        @apply opacity-100;
+        @apply -bottom-8 opacity-100;
+    }
+}
+
+@keyframes tooltipUp {
+    0% {
+        @apply -top-9 opacity-50;
+    }
+    100% {
+        @apply -top-10 opacity-100;
     }
 }
 
